# dap-github-agent-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ai_ci_processor.yaml  ai_issue_processor.yaml  auto_commit_changes.yaml  process_auto_changes.yaml  publish_components_on_tag.yaml  publish_pipelines_on_tag.yaml  run_ci.yaml
scripts/: build_custom_components.py  push_custom_components.py  push_pipelines.py  serialize_pipelines.py  test_pipeline_serialization.py
src/dc_custom_component/components/ci/: __init__.py  branch_creator.py  ci_output_parser.py  documents_to_messages.py
src/dc_custom_component/components/github/: branch_creator.py  documents_to_messages.py  fetch_issues.py  file_editor.py  issue_viewer.py  pr_creator.py  read_contents.py  repo_viewer.py
src/dc_custom_component/components/jira/: __init__.py  fetch_issues.py  jira_issue_viewer.py
src/dc_custom_component/components/parsers/: chat_history_parser.py  json_parser.py  regex_parser.py  tool_dict_parser.py
src/dc_custom_component/pipelines/: __init__.py
src/dc_custom_component/pipelines/ci_agent/: __init__.py  ci_agent.py  system_prompt.py
src/dc_custom_component/pipelines/github_agent/: github_agent.py  system_prompt.py
src/dc_custom_component/pipelines/jira_agent/: __init__.py  jira_agent.py
src/dc_custom_component/pipelines/webinar_agent/: webinar_agent.py
tests/components/github/: test_file_editor.py
tests/components/jira/: test_fetch_jira_issue.py  test_jira_issue_viewer.py
